# gpustack-higress-plugin

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  DOCKER_BUILD.md  Dockerfile  MANIFEST.in  Makefile  README.md  go.mod  go.sum  go.work  go.work.sum  pyproject.toml
.github/workflows/: ci.yaml  push.yaml
docs/: deployment-architecture.md
extensions/: Makefile  README_REMOTE_PLUGINS.md  remote_plugins.yaml
extensions/gpustack-set-header-pre-route/: README.md  go.mod  go.sum  main.go
extensions/gpustack-token-usage/: README.md  example.yaml  go.mod  go.sum  main.go  process_data_with_token_test.go
gpustack_higress_plugins/: __init__.py  main.py  server.py
scripts/: fetch_remote_plugins.py  generate_manifest.py  generate_metadata.py
